[Autofill Views] Restoring footer to 40px

This CL addresses a UX regression caused in this revision:
https://chromium.googlesource.com/chromium/src/+/5953f46840e2b051b3e51f625f4ec0c13a70e96d [formerly fa89015c94aa96aed4bcf1452b8c808de3ab627c]

Specifically, the extra height which compensates for corner rounding in
the footer was removed. In pixel terms, this shrunk the footer row from
40px to 36px. This CL reintroduces the extra height.

Change-Id: Ib5d6c1d0a8af1bd63c960597654f85982e280e3a
Bug: 865479
Reviewed-on: https://chromium-review.googlesource.com/1143688
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576762}
Former-commit-id: 368ce422837110d70ee2b14b42fac364199cb0c0